--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -23,6 +23,13 @@
         android:icon="@drawable/ic_borrow"
         android:title="Borrow"
         app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/action_info"
+        android:orderInCategory="3"
+        android:enabled="true"
+        android:icon="@drawable/ic_info"
+        android:title="Info"
+        app:showAsAction="ifRoom"/>
 
 
 </menu>
