--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,23 +2,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#333639"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.writerwriter.libraassist.MainFragment">
 
-        <it.moondroid.coverflow.components.ui.containers.FeatureCoverFlow
-            android:id="@+id/coverFlow"
+    <it.moondroid.coverflow.components.ui.containers.FeatureCoverFlow
+        android:id="@+id/coverFlow"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:coverHeight="150dp"
+        app:coverWidth="120dp"
+        app:maxScaleFactor="1.5"
+        app:reflectionGap="0px"
+        app:rotationThreshold="0.5"
+        app:scalingThreshold="0.5"
+        app:spacing="0.6"
+        app:reflectionOpacity="50"
+        app:verticalPaddingTop="-150dp"
 
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:coverHeight="150dp"
-            app:coverWidth="120dp"
-            app:maxScaleFactor="1.5"
-            app:reflectionGap="0px"
-            app:rotationThreshold="0.5"
-            app:scalingThreshold="0.5"
-            app:spacing="0.6"
-            />
+        />
     <TextSwitcher
         android:id="@+id/title"
         android:paddingBottom="16dp"
