--- a/app/src/main/res/layout/fragment_library_info.xml
+++ b/app/src/main/res/layout/fragment_library_info.xml
@@ -1,12 +1,12 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.writerwriter.libraassist.LibraryInfoFragment">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/library_info_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-</FrameLayout>
+        android:paddingTop="8dp"/>
+</RelativeLayout>
