Library detail fragment will not triggered the appbar navigation icon and user need to use back button or just simply press info icon on the bottom navigation to go back.

--- a/app/src/main/res/layout/fragment_library_info_detail.xml
+++ b/app/src/main/res/layout/fragment_library_info_detail.xml
@@ -2,7 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.writerwriter.libraassist.LibraryInfoDetailFragment">
+    android:background="#fcecc9"
+    tools:context="com.writerwriter.libraassist.LibraryInfoDetailFragment"
+    android:clickable="true">
 
     <TextView
         android:layout_width="match_parent"
