--- a/app/src/main/res/layout/fragment_borrow.xml
+++ b/app/src/main/res/layout/fragment_borrow.xml
@@ -2,25 +2,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.writerwriter.libraassist.BorrowFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
     <android.support.design.widget.TabLayout
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabMode="fixed"/>
+        app:tabMode="fixed"
+        app:tabTextColor="@android:color/white"
+        app:tabSelectedTextColor="@android:color/white"/>
     <FrameLayout
         android:id="@+id/borrowSubPageContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/tabs">
+        android:layout_below="@+id/tabs"
+        android:background="@color/colorBG">
 
     </FrameLayout>
 
