--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -47,7 +47,7 @@
                 android:layout_toLeftOf="@id/google_signin_button"
                 android:visibility="visible" />
         </LinearLayout>
-
+<!--
         <LinearLayout
             android:id="@+id/account_list"
             android:layout_width="match_parent"
@@ -133,6 +133,13 @@
                 android:text="password" />
 
         </LinearLayout>
+        -->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/account_recyclerlist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </android.support.v7.widget.RecyclerView>
     </LinearLayout>
 
 </FrameLayout>
