--- a/app/src/main/res/layout/collection_search_result_item.xml
+++ b/app/src/main/res/layout/collection_search_result_item.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
     android:layout_margin="7dp"
     app:cardBackgroundColor="@color/colorBG">
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/bookcover"
         android:layout_width="80dp"
@@ -18,21 +21,21 @@
     <TextView
         android:id="@+id/book_name"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginStart="94dp"
-        android:text="TextView" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="94dp" />
     <TextView
         android:id="@+id/author"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_marginTop="40dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/book_name"
         android:layout_marginStart="94dp"/>
     <TextView
         android:id="@+id/library"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_marginTop="70dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/author"
         android:layout_marginStart="94dp"/>
+    </RelativeLayout>
 
 
 
