--- a/app/src/main/res/layout/account_list_card.xml
+++ b/app/src/main/res/layout/account_list_card.xml
@@ -1,28 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.CardView android:id="@+id/account_cardview"
+
+<com.ramotion.foldingcell.FoldingCell android:id="@+id/account_cardview"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    card_view:cardCornerRadius="5dp"
     android:layout_margin="7dp"
-    card_view:cardElevation="5dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:background="@android:color/holo_blue_bright">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:src="@drawable/ntpu_lib"
+            />
+
+        <EditText
+            android:id="@+id/enter_account"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:hint="Account" />
+
+        <EditText
+            android:id="@+id/enter_password"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:hint="Password"
+            android:inputType="textWebPassword"/>
+        <Button
+            android:id="@+id/log_in_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Log in"
+            android:layout_gravity="center_horizontal"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@android:color/white">
 
         <TextView
             android:id="@+id/account"
             android:layout_width="match_parent"
-            android:layout_height="75dp" />
+            android:layout_height="50dp" />
 
         <TextView
             android:id="@+id/library_name"
             android:layout_width="match_parent"
-            android:layout_height="75dp"/>
+            android:layout_height="50dp"/>
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</com.ramotion.foldingcell.FoldingCell>
