--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,8 +35,14 @@
         android:layout_above="@id/bnve"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
-
     </FrameLayout>
+
+    <com.victor.loading.book.BookLoading
+        android:id="@+id/book_loading_animation"
+        android:layout_width="120dp"
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
 
 
 </RelativeLayout>
