--- a/app/src/main/res/layout/fragment_collection_book_detail.xml
+++ b/app/src/main/res/layout/fragment_collection_book_detail.xml
@@ -6,25 +6,68 @@
     tools:context="com.writerwriter.libraassist.CollectionBookDetailFragment">
 
     <ImageView
-        android:id="@+id/cover"
+        android:id="@+id/book_detail_cover"
         android:layout_width="140dp"
         android:layout_height="170dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginStart="30dp" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="36dp" />
+
     <TextView
-        android:layout_width="180dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginStart="180dp" />
+        android:id="@+id/book_detail_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/book_detail_cover"
+        android:layout_marginTop="17dp"
+        android:textSize="20sp"/>
+
     <TextView
-        android:layout_width="180dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginStart="180dp"/>
+        android:id="@+id/book_detail_author"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/book_detail_title"
+        android:textSize="20sp"/>
+
     <TextView
-        android:layout_width="180dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="165dp"
-        android:layout_marginStart="180dp"/>
+        android:id="@+id/book_detail_ISBN"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/book_detail_author"
+        android:textSize="20sp"/>
+
+    <TextView
+        android:id="@+id/book_detail_publisher"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/book_detail_ISBN"
+        android:textSize="20sp"/>
+
+    <TextView
+        android:id="@+id/book_detail_publishYear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/book_detail_publisher"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/book_detail_library"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/book_detail_publishYear"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/book_detail_remain"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/book_detail_library"
+        android:textSize="20sp"/>
 
 </RelativeLayout>
