--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBG"
-    tools:context="com.writerwriter.libraassist.NotificationFragment">
+    tools:context="com.writerwriter.libraassist.NotificationFragment"
+    android:clickable="true">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
