--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,10 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorAccent">#00FFFF</color>
     <color name="colorTitle">#000000</color>
     <color name="colorBG">#fcecc9</color>
+    <color name="book_loading_background">#fcecc9</color>
+    <color name="book_loading_book">#ff33b5e5</color>
+    <color name="book_loading_page">#fcecc9</color>
 </resources>
