Fix:1.book detail page can  not be open again when changing pages on bottom navigation.     2.press notification icon or settings icon (now is user icon) too fast will cause app crashed. Add:1.borrowfragment now have containers (List) to show recyclerview.     2.user log in page have different picture to show what the library is.

--- a/app/src/main/res/layout/account_list_card.xml
+++ b/app/src/main/res/layout/account_list_card.xml
@@ -15,9 +15,9 @@
         android:background="@android:color/holo_blue_bright">
 
         <ImageView
+            android:id="@+id/library_login_icon"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:src="@drawable/ntpu_lib"
             />
 
         <EditText
