--- a/app/src/main/res/layout/fragment_sub1_borrow.xml
+++ b/app/src/main/res/layout/fragment_sub1_borrow.xml
@@ -6,9 +6,11 @@
     tools:context="com.writerwriter.libraassist.Sub1BorrowFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/borrow_book_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="yes" />
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
