--- a/app/src/main/res/layout/fragment_library_info_detail.xml
+++ b/app/src/main/res/layout/fragment_library_info_detail.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fcecc9"
+    android:background="@color/colorBG"
     tools:context="com.writerwriter.libraassist.LibraryInfoDetailFragment"
     android:clickable="true">
 
