--- a/app/src/main/res/layout/borrow_book_item.xml
+++ b/app/src/main/res/layout/borrow_book_item.xml
@@ -2,7 +2,8 @@
 <android.support.v7.widget.CardView
     android:id="@+id/borrow_book_item"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -11,35 +12,53 @@
         <TextView
             android:id="@+id/borrow_book_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorTitle"
+            android:textSize="16sp"
+            android:layout_marginEnd="3dp"/>
         <TextView
             android:id="@+id/borrow_book_author"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:layout_marginEnd="2dp"/>
         <TextView
             android:id="@+id/borrow_book_location"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:layout_marginEnd="2dp"/>
         <TextView
             android:id="@+id/borrow_book_search_number"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:layout_marginEnd="2dp"/>
         <TextView
             android:id="@+id/borrow_book_borrow_time"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:layout_marginEnd="2dp"/>
         <TextView
             android:id="@+id/borrow_book_return_time"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:layout_marginEnd="2dp"
+            android:textColor="@color/colorTitle"/>
         <TextView
             android:id="@+id/borrow_book_waiting_people_number"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:layout_marginEnd="2dp"/>
         <TextView
             android:id="@+id/borrow_book_renew_count"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:layout_marginEnd="2dp"/>
 
     </LinearLayout>
 
