--- a/app/src/main/res/layout/account_list_card.xml
+++ b/app/src/main/res/layout/account_list_card.xml
@@ -32,12 +32,23 @@
             android:layout_height="50dp"
             android:hint="Password"
             android:inputType="textWebPassword"/>
-        <Button
-            android:id="@+id/log_in_btn"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Log in"
-            android:layout_gravity="center_horizontal"/>
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal">
+            <Button
+                android:id="@+id/log_out_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Log out"/>
+            <Button
+                android:id="@+id/log_in_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Log in"/>
+
+        </LinearLayout>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
