--- a/app/src/main/res/layout/fragment_library_info_detail.xml
+++ b/app/src/main/res/layout/fragment_library_info_detail.xml
@@ -7,8 +7,10 @@
     android:clickable="true">
 
     <TextView
+        android:id="@+id/library_detail_info"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:scrollbars="vertical"
+        android:maxLines="33"/>
 
 </FrameLayout>
