--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -23,8 +23,8 @@
 
             <TextView
                 android:id="@+id/username_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="username"
                 android:gravity="center"
@@ -33,13 +33,9 @@
 
             <com.google.android.gms.common.SignInButton
                 android:id="@+id/google_signin_button"
-                android:layout_width="134dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
-                <LinearLayout
-                    android:layout_width="50dp"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"></LinearLayout>
             </com.google.android.gms.common.SignInButton>
 
             <Button
