--- a/app/src/main/res/layout/fragment_sub3_borrow.xml
+++ b/app/src/main/res/layout/fragment_sub3_borrow.xml
@@ -14,7 +14,7 @@
         android:layout_margin="16dp"
         android:elevation="6dp"
         app:pressedTranslationZ="12dp"
-        app:backgroundTint="@android:color/holo_blue_dark"
+        app:backgroundTint="@color/colorPrimary"
         android:src="@drawable/ic_action_add"
         />
 
